# ferrodata

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: data-pipeline.yml  streamlit-deploy.yml
ferrodata/: dbt_project.yml
ferrodata/models/marts/: agg_monthly_service_performance.sql  agg_route_performance.sql  agg_station_performance.sql  fct_tgv_delays_by_cause.sql  fct_train_punctuality.sql
ferrodata/models/staging/sncf/: stg_sncf__gares.sql  stg_sncf__regularite_intercites.sql  stg_sncf__regularite_ter.sql  stg_sncf__regularite_tgv.sql
ferrodata_dbt/: dbt_project.yml
ferrodata_dbt/models/marts/: _marts_models.yml  agg_station_performance.sql  dim_stations.sql
ferrodata_dbt/models/staging/sncf/: _sncf_models.yml  _sncf_sources.yml  stg_sncf__regularite_intercites.sql
ingestion/: config.py  main.py  models.py  pipeline.py  pyproject.toml
ingestion/fetchers/: base.py  sncf.py
ingestion/loaders/: base.py  bigquery.py  duckdb.py  local.py
streamlit_app/: .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  app.py  docker-compose.yml  justfile  main.py  packages.txt  pyproject.toml  requirements.txt
streamlit_app/.streamlit/: config.toml  secrets.toml.example
streamlit_app/data/: sample_data.csv
streamlit_app/pages/: 1_🗺️_Station_Map.py  2_🚄_Route_Explorer.py  3_🔍_Delay_Analysis.py
streamlit_app/src/ferrodata_delays_analysis/: __init__.py  __main__.py
streamlit_app/src/ferrodata_delays_analysis/components/: charts.py  footer.py  sidebar.py
streamlit_app/src/ferrodata_delays_analysis/pages/: 1_home.py  2_dashboard.py  3_settings.py  4_station_map.py  5_route_explorer.py  6_delay_analysis.py  dashboard.py  delay_analysis.py  home.py  route_explorer.py  station_map.py
streamlit_app/src/ferrodata_delays_analysis/utils/: database.py  helpers.py
streamlit_app/utils/: charts.py  db.py
