[project]
name = "ferrodata"
version = "0.1.0"
description = "SNCF train data analytics platform - ingestion, transformation, and visualization"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Slimane Lakehal" }
]

[tool.uv.sources]
ferrodata-ingestion = { workspace = true }
ferrodata-app = { workspace = true }

# Workspace configuration
[tool.uv.workspace]
members = [
    "ingestion",
    "streamlit_app"
]

# Shared development tools (optional - available to all workspaces)
[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "ipython>=8.12.0",
]

