[project]
name = "ferrodata"
version = "0.1.0"
description = "SNCF train data analytics platform - ingestion, transformation, and visualization"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Slimane Lakehal" }
]
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
]

[tool.uv.sources]
ferrodata-ingestion = { workspace = true }
ferrodata-app = { workspace = true }

# Workspace configuration
[tool.uv.workspace]
members = [
    "ingestion",
    "streamlit_app"
]

