[project]
name = "ferrodata"
version = "0.1.0"
description = "SNCF train data analytics platform - ingestion, transformation, and visualization"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Slimane Lakehal" }
]
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "google-cloud-bigquery>=3.40.1",
]

[tool.uv.sources]
ferrodata-ingestion = { workspace = true }
ferrodata-app = { workspace = true }
ferrodata_delays_analysis = { workspace = true }

# Workspace configuration
[tool.uv.workspace]
members = [
    "ingestion",
    "streamlit_app"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
