[project]
name = "ferrodata_delays_analysis"
version = "1.0.0"
description = "Interactive dashboard for analysing the performance of the french railway plateform."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Slimane Lakehal", email = "lakehalslimane@gmail.com" }
]

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "pydeck>=0.8.1",
    "duckdb>=1.0.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.49.1",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.40.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 120
